feat: otp verification added

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=5001
 MONGODB_URI=mongodb+srv://vaibhawkr744:CGOd0hAyy7gLQU0P@cluster0.7qsxh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0=Cluster0
 JWT_SECRET=your_jwt_secret_key
+TWO_FACTOR_KEY=110e1cbc-b3e0-11ef-8b17-0200cd936042
